--- a/QMBE3730_Assignment_0.ipynb
+++ b/QMBE3730_Assignment_0.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKhf2BpHNollo7NMtIThLV",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOEIj6u5Zxy7bsrNEax9kdw"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,45 +16,11 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/parkerleipzig5/QMBE-3750-Parker-Leipzig/blob/main/QMBE3730_Assignment_0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount(\"/content/drive\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3QxITBN6Gnmr",
-        "outputId": "757ae724-7ff1-4c25-911f-c538b6aa4ea5"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "#opening the file\n",
         "import pandas as pd\n",
         "\n",
-        "#opening the file\n",
         "df = pd.read_csv(\"/content/netflix_titles.csv\")\n",
         "df.head()"
       ],
@@ -68,6 +33,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#shows what kind of data each column is\n",
         "print(\"Data Types of Each Column:\\n\")\n",
         "print(df.dtypes)"
       ],
@@ -105,20 +71,38 @@
     {
       "cell_type": "code",
       "source": [
+        "#Show how many total unique data points there are in the Titles, Directors, and Release Year columns\n",
         "print(\"\\nUnique Counts:\")\n",
         "print(f\"Total Titles: {df['show_id'].nunique()}\")\n",
         "print(f\"Total Directors: {df['director'].nunique()}\")\n",
         "print(f\"Total Release Years: {df['release_year'].nunique()}\")"
       ],
       "metadata": {
-        "id": "CTF2VZX0JcL2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CTF2VZX0JcL2",
+        "outputId": "1ec2b0b3-1115-428d-e893-2553b850f364"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Unique Counts:\n",
+            "Total Titles: 8807\n",
+            "Total Directors: 4528\n",
+            "Total Release Years: 74\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
+        "#shows how many films each director has produced\n",
         "films_per_director = df['director'].value_counts()\n",
         "print(\"Number of Films per Director:\\n\")\n",
         "print(films_per_director)"
@@ -132,6 +116,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#shows how many films there are for each rating type... after running you can see that some data is in the wrong spot\n",
         "films_per_rating = df['rating'].value_counts()\n",
         "print(\"Number of Films per TV Rating:\\n\")\n",
         "print(films_per_rating)"
